--- a/testing/index.html
+++ b/testing/index.html
@@ -9,6 +9,6 @@
     <script type="module" src="./Counter.ts"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <!-- Greatness from small beginnings. - Francis Drake -->
   </body>
 </html>
